# quant-system

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  batch_test.py  debug_multi_tf.py  docker-compose.yml  pyproject.toml  pyrightconfig.json  realtime_monitor.py  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: default.yaml  system.yaml
data/strategies/: aaa.yaml  aaa_strategy.py
doc/: 01-strategy-design.md  02-system-architecture.md  03-data-model.md  04-backtest-framework.md  05-risk-management.md
docs/: ARCHITECTURE.md  CUSTOM_STRATEGIES.md  CUSTOM_STRATEGIES_SUMMARY.md  LOGGING_SEPARATION.md  OPTIMIZATION_FINAL_REPORT.md  OPTIMIZATION_REPORT.md  PROJECT_SUMMARY.md  STRATEGY_CONFIG_OPTIMIZATION.md  TYPE_HINTS_GUIDE.md  UNIFIED_STRATEGIES.md  architecture.md  cli-architecture-plan.md  strategy-development.md
docs/api/: README.md
docs/examples/: quick-start.md
examples/: custom_strategy_demo.py  use_enhanced_data_service.py
notebooks/.ipynb_checkpoints/: test_macd_interactive-checkpoint.ipynb
scripts/: backup.sh  verify.sh
src/: __init__.py  main.py
src/api/: __init__.py  auth.py  security.py  server.py
src/backtest/: __init__.py  engine.py  metrics.py
src/broker/: __init__.py  base.py  simulator.py
src/cli/: __init__.py  client.py  client_mode.py  command_mode.py  execution_modes.py  interactive_mode.py  main.py  server_mode.py
src/cli/commands/: __init__.py
src/common/: __init__.py  context.py
src/config/: __init__.py  base.py  loader.py  schema.py
src/core/: __init__.py  analyze_engine.py  async_event_bus.py  audit_log.py  backtest_engine.py  base_engine.py  engine.py  engine_manager.py  event_bus.py  exceptions.py  live_engine.py  metrics.py  models.py
src/data/: __init__.py  connection_pool.py  factory.py  health_monitor.py  indicator.py  market.py  portfolio.py  provider.py  query_optimizer.py  service.py  smart_adapter.py
src/notification/: __init__.py  base.py  email_notifier.py  manager.py  webhook_notifier.py
src/risk/: __init__.py  manager.py
src/runner/: __init__.py  analyze.py  application.py  backtest.py  base.py  interfaces.py  monitor.py
src/strategy/: __init__.py  base.py  loader.py  macd.py  macd_multi_timeframe.py  macd_weekly.py  manager.py  registry.py
src/strategy/configs/: default.yaml  macd.yaml  (+2 more)
src/utils/: __init__.py  date_utils.py  logging_config.py  memory_monitor.py  type_hints.py
tests/: test_async_event_bus.py  test_audit_log.py  test_cli_integration.py  test_connection_pool.py  test_data_integration.py  test_data_layer.py  test_exceptions.py  test_macd_plot.py  test_query_optimizer.py  test_strategy_base.py  test_strategy_loader.py  test_strategy_manager.py  test_strategy_module.py  test_strategy_registry.py  test_type_hints.py
tests/data/: test_smart_adapter.py
tests/fixtures/: 002050_SZ_daily.csv
